--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,7 @@
     "removeComments": true,
     "preserveConstEnums": true,
     "sourceMap": true,
+    "inlineSources": true,
     "strict": true,
     "outFile": "./public/index.js",
     "lib": [
